<resources>
    <string name="app_name">Projeto Android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_insert">Enviar Meme</string>
    <string name="menu_get_all">Listar Todos Memes</string>
    <string name="menu_edit">Editar Meme</string>
    <string name="meme_description">Meme</string>
    <string name="update_btn">Atualizar</string>
    <string name="menu_search">Pesquisar</string>
    <string name="sign_out">Sair</string>
    <string name="finish">Finalizar</string>
    <string name="revoke">Revogar</string>
    <string name="sign_in_screen">Tela de Sign In</string>
    <string name="disconnected">Desconectado</string>
    <string name="tag_txtview">"#"</string>
    <string name="description_txtview">""</string>
    <string name="name_txtview">""</string>
    <string name="name">Nome</string>
    <string name="description">Descrição</string>
    <string name="tag">Tag</string>
    <string name="selected_image">Imagem Selecionada</string>
    <string name="btn_select_image">Selecionar Imagem</string>
    <string name="btn_save">Salvar</string>
    <string name="nice_meme">Meme maneiro</string>
    <string name="btn_update">Atualizar</string>
</resources>
