<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_get_all">

    <fragment
        android:id="@+id/nav_insert"
        android:name="br.ft.unicamp.v206907.c195743.projetoandroid.memeinsert.InsertMemeFragment"
        android:label="@string/menu_insert"
        tools:layout="@layout/fragment_insert_meme" />
    <fragment
        android:id="@+id/nav_get_all"
        android:name="br.ft.unicamp.v206907.c195743.projetoandroid.memegetall.GetAllMemeFragment"
        android:label="@string/menu_get_all"
        tools:layout="@layout/fragment_get_all_meme" />
    <fragment
        android:id="@+id/editMemeFragment"
        android:name="br.ft.unicamp.v206907.c195743.projetoandroid.memeedit.EditMemeFragment"
        android:label="@string/menu_edit"
        tools:layout="@layout/fragment_edit_meme" />
    <fragment
        android:id="@+id/signInFragment"
        android:name="br.ft.unicamp.v206907.c195743.projetoandroid.services.SignInFragment"
        android:label="fragment_sign_in"
        tools:layout="@layout/fragment_sign_in" />
</navigation>